<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_purple"
                    >

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/emailLoginTextField"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:importantForAutofill="no" android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:id="@+id/passwordLoginTextField"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailLoginTextField"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="@+id/emailLoginTextField"
            app:layout_constraintEnd_toEndOf="@+id/emailLoginTextField" app:layout_constraintHorizontal_bias="1.0"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="214dp" android:id="@+id/guideline"/>
    <TextView
            android:text="@string/neki_kurac_od_slike"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/moguceNesto" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_end="228dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/loginButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintHorizontal_bias="0.507"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/registerTextView"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/registerTextView"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerTextView"
            app:layout_constraintEnd_toEndOf="@+id/loginButton" app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintHorizontal_bias="0.6" android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>