<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue"
>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_begin="137dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="326dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/usernameField"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="@+id/guideline"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/usernameField"
            app:layout_constraintEnd_toEndOf="@+id/usernameField"
            android:id="@+id/registerInputEmail" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/usernameField"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/registerInputEmail"
            app:layout_constraintEnd_toEndOf="@+id/registerInputEmail" android:id="@+id/registerInputPassword"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registerInputEmail"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.089"
            android:importantForAutofill="no"/>
    <Button
            android:text="@string/registerButton"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/registerButton" app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/haveAnAccount"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginTextView" android:layout_marginBottom="116dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.428"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_begin="436dp"/>
    <ImageView
            android:layout_width="127sp"
            android:layout_height="127sp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>
</android.support.constraint.ConstraintLayout>